wp-content/plugins/candela-utility/themes/bombadil/style.css
/*
Theme Name: Bombadil
Description: One Theme To Rule Them All
Author: Lumen Learning
Version: 0.1
Template: pressbooks-book
Tags: Pressbooks Textbook

The screenshot.png for this theme was downloaded from https://www.flickr.com/photos/queerdood/5541802963/
and is used under a CC BY License.
*/

@import url("../../../pressbooks/themes-book/pressbooks-book/style.css");


/* ------------------------------------------------------------------------ *
 * GLOBALS
 * ------------------------------------------------------------------------ */

html {
  -webkit-font-smoothing: subpixel-antialiased;
}
body {
	font: 1em/1.5em "proxima-nova", sans-serif !important;
	font-family: "proxima-nova", sans-serif !important;
	background: #fff;
}
a {
	color: #6c64ad;
	text-decoration: underline;
	font-weight: 600;
}
h1, h2, h3, h4, h5, h6 {
	color: #077fab;
	font-family: "proxima-nova", sans-serif;
	font-weight: 600;
	text-align: left;
}
ol.alphalist {
	list-style-type: lower-alpha;
	list-style-position: inside;
	margin-left: 25px;
}
ol.alphalist li::before {
	content: normal;
}
ul li {
	list-style-type: none;
}
img {
	border: none;
}
.pullleft {
	margin-right: 4%;
}


/* ------------------------------------------------------------------------ *
 * COVER PAGE
 * ------------------------------------------------------------------------ */

.alt-formats{
	float: left;
	max-width: 340px;
	width: 35%;
}
.alt-formats h4{
	border-bottom-color: #FFFFFF;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	padding-bottom: 10px;
	width: 100%;
}
.log-wrap a {
  text-decoration: none;
}
.book-info-container {
	font: 16px/1.5 'proxima-nova', serif !important;
	background: #077fab;
	padding-bottom: 2em;
	z-index: -9;
}
.book-info-container h1,
.book-info-container h2,
.book-info-container h3,
.book-info-container h4,
.book-info-container h5 {
	font-family: "proxima-nova", sans-serif;
	font-weight: 600;
}
.book-cover img {
	background-color: transparent;
	box-shadow: none;
	max-width: 12em;
	float: left;
	border: 0.25em solid #fafafa;
	margin-top: 1.75em;
}
.book-info .book-author {
	display: none;
}
.book-info {
	margin-top: 0;
}
.call-to-action {
	margin-top: 0;
}
.book-info h1 {
	font-size: 1.75em;
}
.book-info h1 a {
	color: #fff;
}
.second-block-wrap {
  background: #fff;
  border: 1px solid #e1e1e1;
  padding: 2em 0 3em 0;
  text-align: center;
  margin-top: 3em;
  margin-bottom: 3em;
}
.second-block-wrap h2 {
  font-size: 0.8em;
  text-transform: uppercase;
  letter-spacing: 0.4em;
  text-align: center;
  margin: 1em auto 2em auto;
  color: #959595;
}
.description-book-info {
	float: left;
	margin-right: 0;
	max-width: 100%;
	width: 100%;
	text-align: center;
}
.third-block-wrap {
  background: #fff;
  padding: 1.75em 0.5em 2em 0.5em;
  border: none;
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  margin-top: -3em;
  z-index: 9999;
  border-radius: 6px;
}
.third-block-wrap ul {
	font-size: 1.1em;
}
.third-block {
	color: #333;
	font-family: "proxima-nova", sans-serif;
	font-size: 0.8em;
}
.third-block h2 {
  font-size: 1em;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.4em;
  text-align: center;
  margin: 0em auto 2.25em auto;
  color: #959595;
  border-bottom: 1px solid #e1e1e1;
  padding-bottom: 2em;
}
.third-block ul li {
	margin-bottom: 0.6em;
}
.third-block-wrap a {
  color: #1d1d1d;
}
.third-block-wrap a:hover {
  color: #077fab;
}
.third-block-wrap h4 {
  font-size: 1.1em;
  margin-top: 1em;
  margin-bottom: 0.75em;
  text-transform: none;
  font-weight: 600 !important;
}
.third-block-wrap h4 a {
	font-weight: 600 !important;
}
.third-block-wrap ul {
  line-height: 1.3 !important;
}


/* ------------------------------------------------------------------------ *
 * STUDY PLAN PAGE
 * ------------------------------------------------------------------------ */

#study-guide-heading {
  height: 105px;
  position: relative;
}
#study-guide-heading-content {
	margin-top: 2.5em;
}
#study-guide-heading-content h1 {
  font-weight: 400;
  margin: 0;
}
#why-it-matters,
#what-you-know,
#putting-it-together,
#quiz {
  height: 160px;
}
#why-it-matters, #putting-it-together {
  background-color: #007a7c;
}
#what-you-know {
  background-color: #eee;
}
#quiz {
  background-color: #077fab;
}
.content-image {
  float: left;
  height: 130px;
  width: 180px;
}
.content-image img {
  height: 100px;
  width: 100px;
  margin: 0 40px;
  padding: 0;
}
.content-description {
  position: relative;
  left: 30px;
  line-height: 1.2em;
}
#why-it-matters .content-description,
#quiz .content-description {
  color: #fff;
}
#why-it-matters .content-description a,
#quiz .content-description a {
  color: #fff;
}
.content-description-title {
  margin: 30px 0 10px 0;
  font-weight: 400;
  text-transform: capitalize;
  font-size: 1.5em;
  padding: 8px 0 4px 0;
}
.content-description-title a {
  text-transform: capitalize;
  font-weight: 400;
}
.content-description-title p {
  text-transform: none;
}
.content-description-long {
  font-size: 14px;
}
.chapters {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  border-radius: 6px;
  background-color: #fff;
}
.chapter-content {
  min-height: 160px;
  margin: 30px 0 20px 0;
  line-height: 1.2em;
  position: relative;
}
.chapter-content .content-image {
  position: absolute;
  height: 100% !important;
  background: #eee;
  border-radius: 6px 0 0 6px;
  margin-left: 15px;
}
.chapter-content .content-image img {
  margin-top: 30px;
}
.chapter-content .content-image p {
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 0.1em;
  color: #D43900;
  font-size: 0.9em;
  text-align: center;
}
.chapter-content .content-description {
  position: relative;
  left: 210px;
}
.chapter-content .content-description-title {
  margin: 0;
  padding: 30px 0 10px 0;
  text-decoration: none;
  line-height: 1em;
}
.chapter-content .content-description-long p {
  font-size: 0.9em;
}
td a {
  font-weight: 400;
}
/* ... */

